# Student_Management_C-

./: CMakeLists.txt  Makefile  main  main.cpp  student.cpp  student.h  student_test
